@@ -1,6 +1,6 @@
 #   GNUmakefile: main makefile for GNUstep GUI Demo Suite
 #
-#   Copyright (C) 1999 Free Software Foundation, Inc.
+#   Copyright (C) 1999-2013 Free Software Foundation, Inc.
 #
 #   Author:  Nicola Pero <n.pero@mi.flashnet.it>
 #   Date: 1999
@@ -35,6 +35,7 @@ SUBPROJECTS = \
   KeyboardInput-test \
   NSAnimation-test \
   NSBox-test \
+  NSBrowser-test \
   NSButton-test \
   NSColorList-test \
   NSColorWell-test \
